@@ -45,8 +45,10 @@ public final class FrameworkMessages {
   public static final String INSERT = "insert";
   public static final String INSERT_NEW = "insert_new";
   public static final String INSERT_MNEMONIC = "insert_mnemonic";
-  public static final String INSERT_UPDATE_TIP = "insert_update_tip";
   public static final String INSERT_TIP = "insert_tip";
+  public static final String SAVE = "save";
+  public static final String SAVE_MNEMONIC = "save_mnemonic";
+  public static final String SAVE_TIP = "save_tip";
   public static final String EMPTY_USERNAME = "empty_username";
   public static final String CONFIRM_EXIT = "confirm_exit";
   public static final String CONFIRM_EXIT_TITLE = "confirm_exit_title";
