@@ -34,11 +34,13 @@ refresh_tip = Refresh data
 view_dependencies = View dependencies
 view_dependencies_tip = View records depending on the selected record
 set_property_value = Set property value
-insert = Save
-insert_new = Save new
-insert_mnemonic = S
-insert_update_tip = Save a new record or update the selected one
+insert = Add
+insert_new = Add new
+insert_mnemonic = A
 insert_tip = Save a new record based on the given values
+save = Save
+save_mnemonic = S
+save_tip = Save a new record or update the selected one
 empty_username = You must provide a valid username
 confirm_update = Update selected?
 confirm_delete_selected = Delete selected?
