@@ -34,11 +34,13 @@ refresh_tip = Endurhla\u00F0a g\u00F6gnum
 view_dependencies = Tengdar f\u00E6rslur
 view_dependencies_tip = Sko\u00F0a f\u00E6rslur sem byggja \u00E1 v\u00F6ldu f\u00E6rslunni
 set_property_value = Setja gildi
-insert = Vista
-insert_new = Vista n\u00FDja
-insert_mnemonic = S
-insert_update_tip = Vista n\u00FDja f\u00E6rslu e\u00F0a uppf\u00E6ra \u00FE\u00E1 v\u00F6ldu
+insert = Bæta við
+insert_new = Bæta vi\u00F0 n\u00FDrri
+insert_mnemonic = B
 insert_tip = Vista n\u00FDja f\u00E6rslu bygg\u00F0a \u00E1 innslegnum gildum
+save = Vista
+save_mnemonic = V
+save_tip = Vista n\u00FDja f\u00E6rslu e\u00F0a uppf\u00E6ra \u00FE\u00E1 v\u00F6ldu
 empty_username = \u00DE\u00FA ver\u00F0ur a\u00F0 tiltaka gilt notendanafn
 confirm_update = Uppf\u00E6ra valdar?
 confirm_delete_selected = Ey\u00F0a v\u00F6ldum?
