@@ -4863,3 +4863,4 @@
   HttpEntityConnection.delete(List<Entity.Key> keys) now handles keys with different entityIds
   NavigableImagePanel, imageMarkPoints removed, paintComponent() no longer final
   EntityEditPanel.InsertEntityAction, buttons enabled state linked to the associated components enabled state
+  FrameworkMessages, insert and save captions split up
